@@ -75,8 +75,8 @@ def test_multipart():
 
 
 def test_end_of_file_multipart():
-    """Test for multipart files ending unexpectedly."""
-    # this test looks innocent but it was actually timeing out in
+    """Test for multipart files ending unexpectedly"""
+    # This test looks innocent but it was actually timeing out in
     # the Werkzeug 0.5 release version (#394)
     data = (
         '--foo\r\n'
@@ -90,6 +90,24 @@ def test_end_of_file_multipart():
                                method='POST')
     assert not data.files
     assert not data.form
+
+
+def test_extra_newline_multipart():
+    """Test for multipart uploads with extra newlines"""
+    # this test looks innocent but it was actually timeing out in
+    # the Werkzeug 0.5 release version (#394)
+    data = (
+        '\r\n\r\n--foo\r\n'
+        'Content-Disposition: form-data; name="foo"\r\n\r\n'
+        'a string\r\n'
+        '--foo--'
+    )
+    data = Request.from_values(input_stream=StringIO(data),
+                               content_length=len(data),
+                               content_type='multipart/form-data; boundary=foo',
+                               method='POST')
+    assert not data.files
+    assert data.form['foo'] == 'a string'
 
 
 def test_nonstandard_line_endings():
